[gd_scene load_steps=10 format=3 uid="uid://cahqvmct0aq2c"]

[ext_resource type="Script" path="res://scenes/UI/game/game.gd" id="1_rnblv"]
[ext_resource type="PackedScene" uid="uid://42fbpkbn0viu" path="res://scenes/overworld/maps/map_001/map_001.tscn" id="2_75gwd"]
[ext_resource type="PackedScene" uid="uid://cy72ifo1kmdb7" path="res://scenes/patient_data/UI/patient_data_ui.tscn" id="4_v15a2"]
[ext_resource type="PackedScene" uid="uid://cyibu1b8m43uc" path="res://scenes/combat/main/main.tscn" id="5_cqne2"]
[ext_resource type="PackedScene" uid="uid://dxuvwd147qy3x" path="res://scenes/UI/quest_menu/quest_menu.tscn" id="5_fjltw"]
[ext_resource type="PackedScene" uid="uid://lls0er1j7kb" path="res://scenes/UI/main_menu/load_save_menu/load_save_menu.tscn" id="6_jjqgt"]
[ext_resource type="PackedScene" uid="uid://bidh4dyxpiib5" path="res://scenes/UI/hover_pop_up/hover_pop_up.tscn" id="6_shnv1"]
[ext_resource type="PackedScene" uid="uid://cy85d3dmowhsg" path="res://scenes/UI/save_menu/save_menu.tscn" id="7_fg6wj"]
[ext_resource type="PackedScene" uid="uid://rihtwrrbhn2p" path="res://scenes/UI/general_menu/general_menu.tscn" id="8_ly425"]

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_rnblv")

[node name="Map" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Map001" parent="Map" instance=ExtResource("2_75gwd")]

[node name="Main" parent="." instance=ExtResource("5_cqne2")]
unique_name_in_owner = true
visible = false

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(577, 324)

[node name="PatientDataUI" parent="." instance=ExtResource("4_v15a2")]
unique_name_in_owner = true
visible = false

[node name="SaveMenu" parent="." instance=ExtResource("7_fg6wj")]
unique_name_in_owner = true
visible = false

[node name="LoadSaveMenu" parent="." instance=ExtResource("6_jjqgt")]
unique_name_in_owner = true
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="QuestMenu" parent="CanvasLayer" instance=ExtResource("5_fjltw")]
unique_name_in_owner = true
visible = false

[node name="HoverPopUp" parent="." instance=ExtResource("6_shnv1")]

[node name="GeneralMenu" parent="." instance=ExtResource("8_ly425")]
unique_name_in_owner = true
visible = false
